2000-08-02  Harlan Stenn  <stenn@whimsy.udel.edu>

	* util/ntp-genkeys.c (crypto_config): Only #ifdef PUBKEY
	(PATH_MAX): Try harder...

2000-08-01  Harlan Stenn  <stenn@whimsy.udel.edu>

	* util/ntp-genkeys.c (main): Use snifflink()
	(snifflink): Implement...

	* configure.in: Check for readlink()

2000-07-31  Harlan Stenn  <stenn@whimsy.udel.edu>

	* util/ntp-genkeys.c (main): Use strdup on the tokens returned
	from ntp_config...
	(crypto_config): Fix a typo...
	(crypto_config): Even more...
	(usage): Flesh it out.

	* include/ntp_config.h: 
	* ntpd/ntp_config.c: Move a whack of #defines to ntp_config.h so
	ntp-genkeys.c can see them, too.

	* util/ntp-genkeys.c: Add stubs to work with ../ntpd/ntp_config.o,
	start hooking things up.
	(main): debugging
	(crypto_config): better implementation
	

	* ntpd/ntp_config.c (getconfig): 
	* ntpd/ntpd.c: Initialize "debug" here, not in ntp_config.c

	* util/Makefile.am (ntp_genkeys_LDADD): Added ../ntpd/ntp_config.o
	* util/Makefile.am (ntp_genkeys_DEPENDENCIES): Added.

2000-07-30  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: 4.0.99k4
	* util/ntp-genkeys.c: Start hacking for new functionality.
	* include/Makefile.am (noinst_HEADERS): Added ntp_cmdargs.h and
	ntp_config.h .
	* ntpd/ntp_config.c: Grab ntp_cmdargs.h.  Make some new globals
	(ugh), move ntpd-specific variables and code to cmd_args.c .
	* ntpd/cmd_args.c: Move command argument processing functions from
	ntp_config.c to this file.
	* ntpd/Makefile.am (ntpd_SOURCES): Added cmd_args.c
	* include/ntpd.h: Move getstartup() to ntp_cmdargs.h
	* include/ntp_cmdargs.h: New file
	Begin the hacking fest to make it easier for ntp-genkeys to use
	ntpd's config processing code.  I really hope this is the lesser
	of the evils...
	
2000-07-28  Harlan Stenn  <stenn@whimsy.udel.edu>

	* util/ntp-genkeys.c (usage): Added.

	* ntpd/ntp_crypto.c: Cleanup
	* ntpd/ntp_proto.c (transmit): Add some parens.
	(peer_xmit): Add ntohl when grabbing sndauto.seq for broadcast.